--- a/index.html
+++ b/index.html
@@ -29,14 +29,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-      @page {
-        margin: 0;
-        size: auto;
+      /* Print-specific layout optimization */
+      @media print {
+        @page {
+          margin: 15mm; /* Professional margin for A4 */
+          size: A4 portrait;
+        }
+        
+        body {
+          -webkit-print-color-adjust: exact !important;
+          print-color-adjust: exact !important;
+          background-color: white;
+        }
+
+        /* Prevent page breaks inside key elements */
+        .break-inside-avoid {
+          page-break-inside: avoid;
+          break-inside: avoid;
+        }
+        
+        /* Ensure layout flows naturally across pages */
+        .print-flow-root {
+          display: block !important;
+          height: auto !important;
+          overflow: visible !important;
+        }
       }
-      body {
-        -webkit-print-color-adjust: exact !important;
-        print-color-adjust: exact !important;
-      }
+
       /* Custom scrollbar for web view */
       ::-webkit-scrollbar {
         width: 8px;
@@ -55,9 +74,9 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+    "react/": "https://esm.sh/react@18.2.0/"
   }
 }
 </script>
